welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
while(vuBiscuit() == false) {
               ^Program:7: error: not found: value pas
		pas = pas + 1;
                ^Program:9: error: value update is not a member of Boolean
			vuBiscuit() = true;
                        ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(vuBiscuit() == false) {
^